@@ -442,11 +442,13 @@ let run ~root =
         Printf.printf "\x1b[0;31m\x1b[1m[FAILED]\x1b[0m \x1b[1m%-20s\x1b[0;33m%s.\n%!" name
           (Printf.sprintf "Command '%s' with error code %n output written to %s" cmd n log_name);
       | Some failing_msg ->
+        let starts_with_plus s = String.length s > 0 && s.[0] = '+' in
+        let lines = List.filter (fun s -> not (starts_with_plus s)) lines in
         let msg = String.concat "\n" lines in
         if failing_msg = msg then
           Printf.printf "\x1b[0;32m\x1b[1m[PASSED]\x1b[0m \x1b[1m%-20s\x1b[0;36m%s.\n%!" name description
         else
-          Printf.printf "\x1b[0;31m\x1b[1m[FAILED]\x1b[0m \x1b[1m%-20s\x1b[0;33m%s.\n%!" name ((Printf.sprintf "Failure with not matching message: %s") msg)
+          Printf.printf "\x1b[0;31m\x1b[1m[FAILED]\x1b[0m \x1b[1m%-20s\x1b[0;33m%s.\n%!" name ((Printf.sprintf "Failure with not matching message:\n%s\n!=\n%s\n") msg failing_msg)
       end;
     | _ ->
       let errors = List.concat (List.map (Match.match_with_fs ~root:full_name) matching) in
